# max7219-emulator

./: .gitignore  .travis.yml  CMakeLists.txt  main.c  travis.yml
scripts/: auto_merge.sh  ut_generate.py
src/: CMakeLists.txt  common.h  handle.c  handle.h
unit_test/: CMakeLists.txt  unit_test  ut.h  ut_handle.c  ut_runner.c
unit_test/unity_framework/: CMakeLists.txt
